force-app/main/default/objects/ISC_Category__c/ISC_Category__c.object-meta.xml
<CustomObject>
    <label>Category</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>