force-app/main/default/objects/ISC_Category__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Catagories</relationshipLabel>
    <relationshipName>Catagories</relationshipName>
    <type>Lookup</type>
</CustomField>