force-app/main/default/objects/ISC_Category__c/fields/Full_Path__c.field-meta.xml
<CustomField>
    <fullName>Full_Path__c</fullName>
    <label>Full Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>