force-app/main/default/objects/ISC_Category__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISC_Notification_Option</valueSetName>
    </valueSet>
</CustomField>