force-app/main/default/objects/ISC_Category__c/fields/Parent_Path__c.field-meta.xml
<CustomField>
    <fullName>Parent_Path__c</fullName>
    <label>Parent Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>