force-app/main/default/objects/ISC_Category__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Queue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_System_Record__c.Type__c</field>
            <operation>equals</operation>
            <value>Queue</value>
        </filterItems>
        <filterItems>
            <field>ISC_System_Record__c.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_System_Record__c</referenceTo>
    <relationshipLabel>Catagories</relationshipLabel>
    <relationshipName>Catagories</relationshipName>
    <type>Lookup</type>
</CustomField>