force-app/main/default/objects/ISC_Category__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISC_Notification_Option</valueSetName>
    </valueSet>
</CustomField>