force-app/main/default/objects/ISC_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Full_Path__c</columns>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Queue__c</columns>
    <columns>Entitlement__c</columns>
    <columns>Notification__c</columns>
    <columns>Visibility__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>